add product query API
