# config/urls.py
@@ -19,6 +19,7 @@ from django.urls import include, path
 
 urlpatterns = [
     path('admin/', admin.site.urls),
+    path('api/products/', include('products.urls')),
     path('api/orders/', include('orders.urls')),
     path('api-auth/', include('rest_framework.urls')),
 ]
